# LaraShell

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  Makefile  README.md
.builds/: freebsd.yml  linux.yml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  release.yml  upload_asset.sh
docs/: escape_support.md  features.md
extra/: larashell.info
extra/completions/: _larashell  larashell.bash  larashell.fish
extra/linux/: LaraShell.desktop  org.larashell.LaraShell.appdata.xml
extra/man/: larashell-bindings.5.scd  larashell-msg.1.scd  larashell.1.scd  larashell.5.scd
extra/osx/LaraShell.app/Contents/: Info.plist
larashell/: Cargo.toml  README.md  build.rs
larashell/src/: cli.rs  clipboard.rs  event.rs  ipc.rs  logging.rs  main.rs  message_bar.rs  panic.rs  window_context.rs
larashell/src/ai/: autocomplete.rs  client.rs  config.rs  mod.rs
larashell/src/config/: bell.rs  bindings.rs  color.rs  cursor.rs  debug.rs  font.rs  mod.rs  monitor.rs  mouse.rs  scrolling.rs  selection.rs  terminal.rs  ui_config.rs  window.rs
larashell/src/display/: color.rs  content.rs  cursor.rs  damage.rs  hint.rs  meter.rs  mod.rs  window.rs
larashell/src/input/: keyboard.rs  mod.rs
larashell/src/renderer/: mod.rs  rects.rs
larashell/src/renderer/text/: gles2.rs  glsl3.rs  mod.rs
larashell/windows/: larashell.rc
larashell/windows/wix/: larashell.wxs
larashell_config/: Cargo.toml
larashell_config/src/: lib.rs
larashell_config_derive/: Cargo.toml
larashell_config_derive/src/: lib.rs  serde_replace.rs
larashell_config_derive/src/config_deserialize/: de_enum.rs  de_struct.rs
larashell_config_derive/tests/: config.rs
larashell_terminal/: Cargo.toml
larashell_terminal/src/: event_loop.rs  lib.rs
larashell_terminal/src/grid/: resize.rs
larashell_terminal/src/term/: cell.rs  mod.rs  search.rs
larashell_terminal/src/tty/: mod.rs  unix.rs
larashell_terminal/src/tty/windows/: blocking.rs  conpty.rs
larashell_terminal/tests/: ref.rs
scripts/: README.md  create-flamegraph.sh
